# CodeStory

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPER_GUIDE.md  GEMINI.md  GRAPH_PARITY_RUNBOOK.md  LICENSE  README.md  USER_GUIDE.md  autoresearch.checks.ps1  autoresearch.config.json  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.ps1  indexing-relationship-logic-plan.md  package-lock.json  package.json  release-claims.json  rust-toolchain.toml  skills-lock.json
crates/codestory-app/: Cargo.toml
crates/codestory-app/src/: agent_commands.rs  graph_builders.rs  graph_canonical.rs  grounding.rs  lib.rs  mermaid.rs  path_resolution.rs  symbol_query.rs  system_actions.rs
crates/codestory-app/tests/: integration.rs
crates/codestory-bench/: Cargo.toml
crates/codestory-bench/benches/: artifact_cache.rs  ask_latency.rs  browser_stress.rs  graph_fidelity.rs  graph_layout.rs  grounding.rs  incremental_cleanup.rs  indexing.rs  resolution_full_scope.rs  tantivy_symbol_commits.rs
crates/codestory-bench/src/: lib.rs  util.rs
crates/codestory-bench/tests/: vector_backend_spike.rs
crates/codestory-cli/: Cargo.toml
crates/codestory-cli/src/: app.rs  args.rs  config.rs  display.rs  drill_targeting.rs  embedding_config.rs  embedding_qualification.rs  embedding_server_transport.rs  explore.rs  file_state.rs  http_transport.rs  lib.rs  local_refresh_status.rs  main.rs  managed_embeddings.rs  native_launcher.rs  native_runtime_layout.rs  output.rs  query_resolution.rs  readiness.rs  readiness_broker.rs  ready_repair_status.rs  report.rs  retrieval.rs  runtime.rs  runtime_main.rs  sidecar_runtime.rs  stdio_catalog.rs  stdio_transport.rs  text_search.rs
crates/codestory-cli/tests/: agent_quality_eval.rs  architecture_contracts.rs  cli_error_contracts.rs  cli_golden_path.rs  codestory_repo_e2e_stats.rs  http_transport_contracts.rs  native_launcher_contracts.rs  onboarding_contracts.rs  packet_search_eval.rs  ready_command.rs  report_export.rs  retrieval_bootstrap_contracts.rs  runtime_backed_flows.rs  search_json_output.rs  sidecar_status_cli.rs  stdio_protocol_contracts.rs  stdio_warm_loop_stats.rs  test_state_isolation.rs
crates/codestory-contracts/: Cargo.toml
crates/codestory-contracts/src/: api.rs  events.rs  graph.rs  grounding.rs  language_support.rs  lib.rs  query.rs  trail.rs  workspace.rs
crates/codestory-contracts/tests/: public_api.rs
crates/codestory-graph/: Cargo.toml
crates/codestory-graph/proptest-regressions/: layout.txt  uml_types.txt
crates/codestory-graph/src/: bundling.rs  converter.rs  edge_router.rs  graph.rs  hit_tester.rs  layout.rs  lib.rs  node_graph.rs  style.rs  uml_types.rs
crates/codestory-gui/: Cargo.toml
crates/codestory-gui/src/: app.rs  dock_state.rs  ide_server.rs  main.rs  navigation.rs  settings.rs  tab_viewer.rs  theme.rs
crates/codestory-index/: Cargo.toml
crates/codestory-index/rules/: c.scm  cpp.scm  java.scm  javascript.scm  python.scm  rust.graph.scm  rust.locals.scm  rust.scm  rust.tags.scm  tsx.graph.scm  tsx.locals.scm  tsx.tags.scm  typescript.graph.scm  typescript.scm
crates/codestory-index/src/: cache.rs  cancellation.rs  compilation_database.rs  intermediate_storage.rs  lib.rs  post_processing.rs  resolution.rs  symbol_table.rs
crates/codestory-index/tests/: call_resolution_common_methods.rs  fidelity_regression.rs  import_resolution.rs  integration.rs  native_rule_regressions.rs  query_rule_regressions.rs  tictactoe_language_coverage.rs  trait_interface_resolution.rs
crates/codestory-indexer/: Cargo.toml
crates/codestory-indexer/rules/: bash.scm  c.scm  cpp.scm  csharp.scm  dart.scm  go.scm  java.scm  javascript.scm  kotlin.scm  php.scm  python.scm  ruby.scm  rust.graph.scm  rust.tags.scm  swift.scm  tsx.graph.scm  typescript.graph.scm
crates/codestory-indexer/src/: cache.rs  cancellation.rs  framework_routes.rs  intermediate_storage.rs  language_configs.rs  lib.rs  symbol_table.rs  template_pipeline.rs
crates/codestory-indexer/tests/: call_resolution_common_methods.rs  fidelity_regression.rs  import_resolution.rs  integration.rs  native_rule_regressions.rs  oss_language_corpus.rs  query_rule_regressions.rs  tictactoe_language_coverage.rs  trait_interface_resolution.rs
crates/codestory-llama-sys/: Cargo.toml  build.rs  model-contract.json  model_staging.rs  native_staging.rs
crates/codestory-llama-sys/src/: admission.rs  lib.rs
crates/codestory-llama-sys/tests/: model_staging.rs  native_staging.rs
crates/codestory-project/: Cargo.toml
crates/codestory-project/src/: lib.rs
crates/codestory-retrieval/: Cargo.toml
crates/codestory-retrieval/assets/: embedding-models.json  llama-sidecar-backends.json
crates/codestory-retrieval/examples/: turbovec_dense_anchor_gate.rs
crates/codestory-retrieval/src/: cache.rs  candidate.rs  capabilities.rs  compose.rs  config.rs  embedded_vector.rs  embedding_contract.rs  embedding_server_compat.rs  embeddings.rs  executor.rs  generation.rs  health.rs  in_process_embedding.rs  index.rs  inventory.rs  lexical_client.rs  lexical_index.rs  lib.rs  managed_assets.rs  mode.rs  native_embedding.rs  outbound_http.rs  per_user_embedding.rs  planner.rs  port_registry.rs  process_identity.rs  qdrant_client.rs  qdrant_storage.rs  query.rs  query_features.rs  ranker.rs  retention.rs  scip_client.rs  scip_index.rs  sidecar.rs  sidecar_search.rs  test_support.rs  zoekt_client.rs  zoekt_index.rs
crates/codestory-retrieval/tests/: bootstrap_repair_contracts.rs  degraded_modes.rs  full_stack_integration.rs  holdout_ranking.rs
crates/codestory-runtime/: Cargo.toml
crates/codestory-runtime/examples/: lexical_compare.rs
crates/codestory-runtime/src/: affected.rs  agent_commands.rs  browser.rs  cache_rehydrate.rs  controller_bookmarks.rs  controller_core.rs  controller_files.rs  controller_indexing.rs  graph_dto.rs  (+43 more)
crates/codestory-search/: Cargo.toml
crates/codestory-server/: Cargo.toml
crates/codestory-storage/: Cargo.toml
crates/codestory-store/: Cargo.toml
crates/codestory-workspace/: Cargo.toml
(+983 files in other folders)
