[workspace]
resolver = "2"
members = [
    "crates/codestory-core",
    "crates/codestory-api",
    "crates/codestory-app",
    "crates/codestory-storage",
    "crates/codestory-index",
    "crates/codestory-search",
    "crates/codestory-graph",
    "crates/codestory-cli",
    "crates/codestory-events",
    "crates/codestory-project",
    "crates/codestory-bench",
]

[workspace.dependencies]
# Internal crates
codestory-core = { path = "crates/codestory-core" }
codestory-api = { path = "crates/codestory-api" }
codestory-app = { path = "crates/codestory-app" }
codestory-storage = { path = "crates/codestory-storage" }
codestory-index = { path = "crates/codestory-index" }
codestory-search = { path = "crates/codestory-search" }
codestory-graph = { path = "crates/codestory-graph" }
codestory-events = { path = "crates/codestory-events" }
codestory-project = { path = "crates/codestory-project" }
codestory-bench = { path = "crates/codestory-bench" }

# Parsing (tree-sitter) - Aligning to 0.24 for tree-sitter-graph 0.12
tree-sitter = "0.24"
tree-sitter-rust = "0.23.3"
tree-sitter-python = "0.23.6"
tree-sitter-java = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c = "0.24"
tree-sitter-javascript = "0.23.1"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23.4"

# Semantic Analysis
tree-sitter-graph = "0.12"
streaming-iterator = "0.1"

# Storage
rusqlite = { version = "0.38", features = ["bundled"] }

# Search
nucleo-matcher = "0.3"
tantivy = "0.25"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rayon = "1.11"
thiserror = "2.0"
tracing = "0.1"
walkdir = "2"
notify = "8"
ignore = "0.4"
tracing-subscriber = "0.3"
clap = { version = "4.5.55", features = ["derive"] }
anyhow = "1.0"
crossbeam-channel = "0.5"
parking_lot = "0.12"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "6.0.0"
dirs = "6.0.0"
glob = "0.3"
sysinfo = "0.38"
feature-probe = "0.1.1"
tempfile = "3.10"

# Experimental Layout
oak-visualize = "0.0.1"

criterion = "0.5"
proptest = "1.5"

[profile.dev]
opt-level = 0 # keep your own code fast-to-compile
debug = 1 # or 2 if you want full debug symbols
incremental = true

[profile.dev.package."*"]
opt-level = 3 # Optimize dependencies for faster execution
debug = false # optional: reduces compile time + binary size for deps
