[workspace]
resolver = "2"
members = [
    "crates/codestory-contracts",
    "crates/codestory-workspace",
    "crates/codestory-store",
    "crates/codestory-indexer",
    "crates/codestory-runtime",
    "crates/codestory-cli",
    "crates/codestory-bench",
]

[workspace.dependencies]
# Internal crates
codestory-contracts = { path = "crates/codestory-contracts" }
codestory-workspace = { path = "crates/codestory-workspace" }
codestory-store = { path = "crates/codestory-store" }
codestory-indexer = { path = "crates/codestory-indexer" }
codestory-runtime = { path = "crates/codestory-runtime" }
codestory-bench = { path = "crates/codestory-bench" }

# Parsing (tree-sitter) - Aligning to 0.24 for tree-sitter-graph 0.12
tree-sitter = "0.24"
tree-sitter-rust = "0.23.3"
tree-sitter-python = "0.23.6"
tree-sitter-java = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c = "0.23"
tree-sitter-javascript = "0.23.1"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23.4"

# Semantic Analysis
tree-sitter-graph = "0.12"
streaming-iterator = "0.1"

# Storage
rusqlite = { version = "0.38", features = ["backup", "bundled"] }

# Search
nucleo-matcher = "0.3"
tantivy = "0.25"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rayon = "1.11"
thiserror = "2.0"
tracing = "0.1"
walkdir = "2"
notify = "8"
ignore = "0.4"
tracing-subscriber = "0.3"
clap = { version = "4.5.55", features = ["derive"] }
anyhow = "1.0"
crossbeam-channel = "0.5"
parking_lot = "0.12"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "6.0.0"
dirs = "6.0.0"
glob = "0.3"
sysinfo = "0.38"
feature-probe = "0.1.1"
tempfile = "3.10"
ort = { version = "2.0.0-rc.11", features = ["ndarray", "download-binaries", "tls-native"] }
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
ndarray = "0.17"

criterion = "0.8.2"
proptest = "1.5"

[profile.dev]
opt-level = 0 # keep your own code fast-to-compile
debug = 1 # or 2 if you want full debug symbols
incremental = true

[profile.dev.package."*"]
opt-level = 3 # Optimize dependencies for faster execution
debug = false # optional: reduces compile time + binary size for deps

