[workspace]
resolver = "2"
members = [
    "crates/codestory-llama-sys",
    "crates/codestory-contracts",
    "crates/codestory-workspace",
    "crates/codestory-store",
    "crates/codestory-indexer",
    "crates/codestory-retrieval",
    "crates/codestory-runtime",
    "crates/codestory-cli",
    "crates/codestory-bench",
]

[workspace.dependencies]
# Internal crates
codestory-llama-sys = { path = "crates/codestory-llama-sys" }
codestory-contracts = { path = "crates/codestory-contracts" }
codestory-workspace = { path = "crates/codestory-workspace" }
codestory-store = { path = "crates/codestory-store" }
codestory-indexer = { path = "crates/codestory-indexer" }
codestory-retrieval = { path = "crates/codestory-retrieval" }
codestory-runtime = { path = "crates/codestory-runtime" }
codestory-bench = { path = "crates/codestory-bench" }

# Parsing (tree-sitter) - Aligning to 0.24 for tree-sitter-graph 0.12
tree-sitter = "0.24"
tree-sitter-rust = "0.23.3"
tree-sitter-python = "0.23.6"
tree-sitter-java = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c = "0.23"
tree-sitter-javascript = "0.23.1"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23.4"
tree-sitter-ruby = "0.23.1"
tree-sitter-php = "0.23.11"
tree-sitter-c-sharp = "=0.23.0"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-swift = "0.7.0"
tree-sitter-dart-orchard = "0.3.2"
tree-sitter-bash = "0.23.3"

# Semantic Analysis
tree-sitter-graph = "0.12"
streaming-iterator = "0.1"

# Storage
rusqlite = { version = "0.38", features = ["backup", "bundled", "hooks"] }

# Search
nucleo-matcher = "0.3"
tantivy = "0.26"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.15.1"
specta = { version = "2.0.0-rc.22", features = ["derive", "serde"] }
tokio = { version = "1", features = ["io-std", "io-util", "macros", "rt-multi-thread"] }
fs4 = "0.13.1"
rayon = "1.11"
thiserror = "2.0"
tracing = "0.1"
notify = "8"
ignore = "0.4"
tracing-subscriber = "0.3"
clap = { version = "4.5.55", features = ["derive"] }
clap_complete = "4.5"
anyhow = "1.0"
crossbeam-channel = "0.5"
crossterm = "0.28"
parking_lot = "0.12"
ratatui = "0.30"
fs_at = "0.2.1"
libc = "0.2"
remove_dir_all = "1.0.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "6.0.0"
glob = "0.3"
tempfile = "3.10"
toml = "0.8"
sha2 = "0.10"
ring = "0.17.14"
ureq = "2.12"
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }
llama-cpp-2 = { version = "=0.1.151", default-features = false }

criterion = "0.8.2"
proptest = "1.5"

[profile.dev]
opt-level = 0 # keep your own code fast-to-compile
debug = 1 # or 2 if you want full debug symbols
incremental = true

[profile.dev.package."*"]
opt-level = 3 # Optimize dependencies for faster execution
debug = false # optional: reduces compile time + binary size for deps
