[package]
name = "codestory-bench"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
codestory-contracts = { workspace = true }
codestory-indexer = { workspace = true }
codestory-runtime = { workspace = true }
codestory-store = { workspace = true }
codestory-workspace = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[[bench]]
name = "indexing"
harness = false

[[bench]]
name = "graph_fidelity"
harness = false

[[bench]]
name = "resolution_full_scope"
harness = false

[[bench]]
name = "ask_latency"
harness = false

[[bench]]
name = "grounding"
harness = false

[[bench]]
name = "incremental_cleanup"
harness = false
