[package]
name = "codestory-bench"
version = "0.16.0"
edition = "2024"
publish = false

[features]
default = ["runtime-bench"]
runtime-bench = ["dep:codestory-runtime"]

[dependencies]
codestory-contracts = { workspace = true }
codestory-indexer = { workspace = true }
codestory-runtime = { workspace = true, optional = true }
codestory-store = { workspace = true }
codestory-workspace = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
rusqlite = { workspace = true }
sha2 = { workspace = true }
sqlite-vec = { workspace = true }
toml = { workspace = true }
usearch = { workspace = true }

[[bench]]
name = "indexing"
harness = false
bench = false
required-features = ["runtime-bench"]

[[bench]]
name = "graph_fidelity"
harness = false
bench = false

[[bench]]
name = "resolution_full_scope"
harness = false
bench = false

[[bench]]
name = "ask_latency"
harness = false
bench = false
required-features = ["runtime-bench"]

[[bench]]
name = "grounding"
harness = false
bench = false
required-features = ["runtime-bench"]

[[bench]]
name = "incremental_cleanup"
harness = false
bench = false

[[bench]]
name = "browser_stress"
harness = false
bench = false
required-features = ["runtime-bench"]
