[package]
name = "codestory-bench"
version = "0.16.0"
edition = "2024"
publish = false

[dependencies]
codestory-contracts = { workspace = true }
codestory-indexer = { workspace = true }
codestory-runtime = { workspace = true, features = ["benchmark-support"] }
codestory-retrieval = { workspace = true }
codestory-store = { workspace = true }
codestory-workspace = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
hex = "0.4"
libc = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
sqlite-vec = "=0.1.9"
usearch = { version = "2.26.0", default-features = false }

[[bench]]
name = "indexing"
harness = false
bench = false

[[bench]]
name = "graph_fidelity"
harness = false
bench = false

[[bench]]
name = "resolution_full_scope"
harness = false
bench = false

[[bench]]
name = "ask_latency"
harness = false
bench = false

[[bench]]
name = "grounding"
harness = false
bench = false

[[bench]]
name = "incremental_cleanup"
harness = false
bench = false

[[bench]]
name = "browser_stress"
harness = false
bench = false

[[bench]]
name = "artifact_cache"
harness = false
bench = false

[[bench]]
name = "tantivy_symbol_commits"
harness = false
bench = false
