[package]
name = "codestory-cli"
version = "0.11.22"
edition = "2024"
description = "Local repository evidence and grounding CLI for source-backed coding workflows."
license = "Apache-2.0"
repository = "https://github.com/TheGreenCedar/CodeStory.git"
readme = "../../README.md"
keywords = ["code-search", "grounding", "cli", "agents"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
codestory-contracts = { workspace = true }
codestory-retrieval = { workspace = true }
codestory-runtime = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
directories = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
ureq = { workspace = true }
notify = { workspace = true }
crossbeam-channel = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
