[package]
name = "codestory-cli"
version = "0.16.0"
edition = "2024"
description = "Local repository evidence and grounding CLI for source-backed coding workflows."
license = "Apache-2.0"
repository = "https://github.com/TheGreenCedar/CodeStory.git"
readme = "../../README.md"
keywords = ["code-search", "grounding", "cli", "agents"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "codestory-cli"
path = "src/main.rs"

[[bin]]
name = "codestory-cli-runtime"
path = "src/runtime_main.rs"

[dependencies]
codestory-contracts = { workspace = true }
codestory-llama-sys = { workspace = true }
codestory-retrieval = { workspace = true }
codestory-runtime = { workspace = true }
codestory-workspace = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
fs4 = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
ureq = { workspace = true }
notify = { workspace = true }
crossbeam-channel = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
] }

[dev-dependencies]
codestory-retrieval = { workspace = true, features = ["test-support"] }
codestory-runtime = { workspace = true, features = ["test-support"] }
rusqlite = { workspace = true }
tempfile = { workspace = true }
