[package]
name = "codestory-contracts"
version = "0.13.7"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
crossbeam-channel = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
serde_with = { workspace = true }
specta = { workspace = true }
