[package]
name = "codestory-graph"
version = "0.1.0"
edition = "2024"

[dependencies]
codestory-core = { workspace = true }
codestory-events = { workspace = true }

anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
