[package]
name = "codestory-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
codestory-core = { workspace = true }
codestory-graph = { workspace = true }
codestory-search = { workspace = true }
codestory-storage = { workspace = true }
codestory-index = { workspace = true }
codestory-events = { workspace = true }
codestory-project = { workspace = true }
tree-sitter = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui_dock = { workspace = true }
egui-notify = { workspace = true }
egui-file-dialog = { workspace = true }
egui_extras = { workspace = true }
egui_plot = { workspace = true }
egui_code_editor = { workspace = true }
egui-phosphor = { version = "0.11.0", features = ["regular", "bold", "fill", "light", "thin"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
sysinfo = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-cpp = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-typescript = { workspace = true }
rfd = { workspace = true }
notify = { workspace = true }
ignore = { workspace = true }
image = "0.25"
fontdue = "0.8"
catppuccin-egui = { version = "5.7", default-features = false, features = [
    "egui33",
] }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
