[package]
name = "codestory-indexer"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }

[dependencies]
anyhow = { workspace = true }
codestory-contracts = { workspace = true }
codestory-store = { workspace = true }
codestory-workspace = { workspace = true }
crossbeam-channel = { workspace = true }
ignore = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
streaming-iterator = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-cpp = { workspace = true }
tree-sitter-graph = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-typescript = { workspace = true }
