[package]
name = "codestory-runtime"
version = "0.14.3"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
codestory-contracts = { workspace = true }
codestory-indexer = { workspace = true }
codestory-retrieval = { workspace = true }
codestory-store = { workspace = true }
codestory-workspace = { workspace = true }
crossbeam-channel = { workspace = true }
fs4 = { workspace = true }
nucleo-matcher = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tantivy = { workspace = true }
tracing = { workspace = true }
ureq = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
codestory-retrieval = { workspace = true, features = ["test-support"] }
tempfile = { workspace = true }
