[package]
name = "codestory-runtime"
version = "0.16.0"
edition = "2024"

[features]
benchmark-support = []
test-support = []

[dependencies]
anyhow = { workspace = true }
codestory-contracts = { workspace = true }
codestory-indexer = { workspace = true }
codestory-retrieval = { workspace = true }
codestory-store = { workspace = true }
codestory-workspace = { workspace = true }
crossbeam-channel = { workspace = true }
fs4 = { workspace = true }
nucleo-matcher = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tantivy = { workspace = true }
tracing = { workspace = true }
ureq = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
codestory-retrieval = { workspace = true, features = ["test-support"] }
rusqlite = { workspace = true }
tempfile = { workspace = true }
