[package]
name = "codestory-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
async-stream = "0.3"
specta = { version = "2.0.0-rc.22", features = ["derive", "serde", "export"] }
specta-typescript = "0.0.9"

codestory-api = { workspace = true }
codestory-app = { workspace = true }
