[package]
name = "codestory-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
codestory-core = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
