[package]
name = "codestory-store"
version = "0.14.2"
edition = "2024"

[dependencies]
codestory-contracts = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
