[package]
name = "codestory-workspace"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
glob = { workspace = true }
ignore = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
